--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "@babel/register": "^7.10.5",
     "browser-sync": "^2.26.12",
     "del": "^5.1.0",
+    "eslint-config-htmlacademy": "^0.5.2",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "fs": "^0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -21,6 +27,7 @@
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
     "gulp-debug": "^4.0.0",
     "gulp-eslint": "^6.0.0",
     "gulp-gh-pages": "^0.5.4",
@@ -33,7 +40,7 @@
     "gulp-remember": "^1.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-uglify-es": "^2.0.0",
+    "gulp-terser": "^1.3.2",
     "gulp-w3c-html-validator": "^2.0.1",
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2",
