add gulp task fonts.js

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-changed": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-cwebp": "^4.0.0",
     "gulp-debug": "^4.0.0",
     "gulp-eslint": "^6.0.0",
     "gulp-gh-pages": "^0.5.4",
