--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-newer": "^1.4.0",
     "gulp-once": "^2.1.1",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-remember": "^1.0.1",
     "gulp-rename": "^2.0.0",
@@ -46,7 +47,9 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "webp-converter": "2.2.3",
+    "webpcss": "^1.3.4"
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
