--- a/package.json
+++ b/package.json
@@ -21,38 +21,46 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "fs": "^0.0.1-security",
+    "gh-pages": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^4.0.2",
+    "gulp-cheerio": "^1.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-cwebp": "^4.0.0",
+    "gulp-data": "^1.3.1",
     "gulp-debug": "^4.0.0",
     "gulp-eslint": "^6.0.0",
-    "gulp-gh-pages": "^0.5.4",
     "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-imagemin": "^7.1.0",
+    "gulp-image": "^6.2.1",
+    "gulp-merge-json": "^2.1.1",
     "gulp-newer": "^1.4.0",
-    "gulp-once": "^2.1.1",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-pretty-html": "^2.0.10",
     "gulp-pug": "^4.0.1",
     "gulp-remember": "^1.0.1",
     "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.1.0",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svgmin": "^3.0.0",
     "gulp-terser": "^1.3.2",
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1",
+    "gulp-yaml": "^2.0.4",
     "path": "^0.12.7",
+    "prettier": "2.1.1",
     "webp-converter": "2.2.3",
     "webpcss": "^1.3.4"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1",
-    "smart-grid": "^2.1.2"
+    "focus-visible": "^5.2.0",
+    "normalize.css": "^8.0.1"
   }
 }
