--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-eslint": "^6.0.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-image": "^6.2.1",
+    "gulp-inject": "^5.0.5",
     "gulp-merge-json": "^2.1.1",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
@@ -47,8 +48,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^3.0.0",
+    "gulp-svgstore": "^7.0.1",
     "gulp-terser": "^1.3.2",
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2",
