--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-prettier": "^3.0.0",
     "gulp-pretty-html": "^2.0.10",
     "gulp-pug": "^4.0.1",
     "gulp-remember": "^1.0.1",
